Fix page wrapping before media query
- Due to imprecise value of the flex-basis of the sidebar and
form-container, the body element would wrap before the media query's
breakpoint which broke the layout on displays that are slightly wider
than 768px
- So instead of relying on the wrapping for the mobile layout. I simply
changed the body element's display back to 'block' inside the
media query to get the same effect.

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .sidebar-container {
-    flex: 4 1 224px;
+    flex: 4 1 0;
     background: url("../assets/img/sidebar-background.jpg") center center/cover no-repeat;
     position: relative;
 }
@@ -66,7 +66,7 @@ body {
 }
 
 .form-container {
-    flex: 7 3 530px;
+    flex: 7 3 0;
     max-height: 100vh;
     overflow: auto;
     padding: 130px 70px;
@@ -219,6 +219,7 @@ input#confirm-password:not(:placeholder-shown):invalid + span::after {
 /* Tablet and mobile layout */
 @media screen and (max-width: 768px) {
     body {
+        display: block;
         max-height: none;
         overflow: visible;
     }
